2009-10-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Renamed TSFE postproc hook class
	* Moved TCEmain and CMSLayout hook classes

2009-04-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed issue with HTML tags in search results title

2009-04-15  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #3040: uppercase extensions are not recognized
	* Tuned search results so that subject has more weight than body
	* Fixed bug #3067: order of the checkboxes (or selections) for advanced search
	* Fixed bug #2531: some issues about xhtml validation
	* Fixed bug #3036: Problems with hypenated database names

2009-02-23  Dmitry Dulepov  <dmitry@typo3.org>

	* Applied Emile's changes to the template

2009-02-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed wrong CSS property

2009-01-21  Dmitry Dulepov  <dmitry@typo3.org>

	* Changed "Last-modified" handling to provide more realistic modification dates
	* Misc updates in the manual

2009-01-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Released version 2.2

2009-01-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #2370: Pi1 is always USER_INT
	* Updated manual with the information about configuring the advanced search form
	* Fixed bug #1937: little changes in the manual
	* Added hook to preprocess htdb:/ URLs (for www.calis.lv)
	* Added a function too obtain controller from view in hooks
	* Fixed typo in class name
	* Added controller reference to hook parameters
	* Advanced form uses <div> instead of <table>
	* Added a setting for the explicit default value in the advanced search form
	* Found terms are now shown as bold
	* Changed internal limit processing to allow more flexible customization using hooks
	* Added information about error 139 to the FAQ
	* Fixed wrong default value for the title field
	* Allow indexing period to be an expression

2009-01-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Implemented advanced search form and custom search limits
	* Fixed bug #3240: Indication of number of found items
